migrate to kotlin ends